--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -71,93 +71,64 @@
 }
 
 /* == BALLOON IMAGE == */
-/* == BALLOON IMAGE == */
 .balloon-image {
   position: absolute;
   width: 207.18px;
   height: 250.92px;
-  top: 373.12px;
-  left: 412.02px;
-  opacity: 1;
-  transform: rotate(0deg);
+  top: 0px;
+  left: 20px;
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+.balloon-info-wrapper {
+  position: absolute;
+  width: 624.466px;
+  height: 327.282px;
+  top: 373.12px;
+  left: 452.02px;
+  background: white;
+  border-radius: 11.96px;
+  box-shadow: 0 0 5.93px rgba(0, 0, 0, 0.08);
 }
 
 
 /* == BALLOON TEXT DETAILS == */
 
-/* Group Container (Group 20909) – optional wrapper */
-.group-20909 {
-  position: absolute;
-  width: 303px;
-  height: 223.22px;
-  left: 773.49px;
-  top: 373.12px;
-}
-
-/* Balloon number */
 .balloon-number {
   position: absolute;
-  width: 270px;
+  top: 0px;
+  left: 250px;
+  font-size: 20px;
+  width: 300px;
   height: 40px;
-  left: calc(50% - 135px + 188.49px);
-  top: 373.12px;
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
 }
 
-/* Potential earnings */
 .potential-earnings {
   position: absolute;
-  width: 303px;
+  top: 50px;
+  left: 250px;
+  font-size: 20px;
+  width: 300px;
   height: 40px;
-  left: calc(50% - 151.5px + 204.99px);
-  top: 434.19px;
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
 }
 
-/* Number of pumps */
 .number-of-pumps {
   position: absolute;
-  width: 253px;
+  top: 100px;
+  left: 250px;
+  font-size: 20px;
+  width: 300px;
   height: 40px;
-  left: calc(50% - 126.5px + 179.99px);
-  top: 495.26px;
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
 }
 
-/* Total Winnings */
 .total-winnings {
   position: absolute;
-  width: 263px;
+  top: 150px;
+  left: 250px;
+  font-size: 20px;
+  width: 300px;
   height: 40px;
-  left: calc(50% - 131.5px + 184.99px);
-  top: 556.34px;
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
 }
 
 
