--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -35,17 +35,17 @@
   transform: matrix(-1, 0, 0, 1, 0, 0); /* Flips individual segment */
 }
 
-
 /* == WATERMARK == */
 .watermark-image {
   position: absolute;
   width: 496.49px;
   height: 437.58px;
   left: calc(50% - 496.49px / 2);
-  top: calc(50% - 437.58px / 2);
+  top: calc(50% - 437.58px / 2 + 0px);
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.5;
+  background-image: url('image (19).png');
 }
 
 /* == LOGO (top-left) == */
@@ -57,6 +57,7 @@
   top: 68.99px;
   background-size: contain;
   background-repeat: no-repeat;
+  background-image: url('image (19).png');
 }
 
 /* == MAIN WHITE BOX == */
@@ -68,7 +69,7 @@
   top: calc(50% - 510.86px / 2 + 20.37px);
   background: white;
   border: 0.5px solid #2C51A1;
-  box-shadow: 0 0 5.93px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 5.93385px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
 }
 
@@ -77,70 +78,84 @@
   position: absolute;
   width: 207.18px;
   height: 250.92px;
-  top: 0px;
-  left: 20px;
+  left: 412.02px;
+  top: 373.12px;
   background-size: contain;
   background-repeat: no-repeat;
+  background-image: url('image [Background removed] [Upscaled].png');
 }
 
 .balloon-info-wrapper {
   position: absolute;
-  width: 624.466px;
-  height: 327.282px;
-  top: 373.12px;
+  width: 624.47px;
+  height: 327.28px;
   left: 452.02px;
+  top: calc(50% - 327.28px / 2 + 24.76px);
   background: white;
   border-radius: 11.96px;
   box-shadow: 0 0 5.93px rgba(0, 0, 0, 0.08);
 }
 
-
 /* == BALLOON TEXT DETAILS == */
-
 .balloon-number {
   position: absolute;
-  top: 0px;
-  left: 250px;
-  font-size: 20px;
-  width: 300px;
+  width: 270px;
   height: 40px;
+  left: calc(50% - 270px / 2 + 188.49px);
+  top: 373.12px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
 }
 
 .potential-earnings {
   position: absolute;
-  top: 50px;
-  left: 250px;
-  font-size: 20px;
-  width: 300px;
+  width: 303px;
   height: 40px;
+  left: calc(50% - 303px / 2 + 204.99px);
+  top: 434.19px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
 }
 
 .number-of-pumps {
   position: absolute;
-  top: 100px;
-  left: 250px;
-  font-size: 20px;
-  width: 300px;
+  width: 253px;
   height: 40px;
+  left: calc(50% - 253px / 2 + 179.99px);
+  top: 495.26px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
 }
 
 .total-winnings {
   position: absolute;
-  top: 150px;
-  left: 250px;
-  font-size: 20px;
-  width: 300px;
+  width: 263px;
   height: 40px;
+  left: calc(50% - 263px / 2 + 184.99px);
+  top: 556.34px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
 }
-
 
 /* == BUTTON ROW (Pump & Collect) == */
 .button-row {
   position: absolute;
   width: 535.95px;
   height: 42px;
-  left: calc(50% - 535.95px / 2);
-  top: 400.4px;
+  left: calc(50% - 535.95px / 2 + 0px);
+  top: 658.4px;
   display: flex;
   justify-content: space-between;
 }
@@ -153,7 +168,7 @@
   color: #FEE9E7;
   font-weight: 700;
   font-size: 18px;
-  border-radius: 11.96px;
+  border-radius: 11.9606px;
   border: none;
   cursor: pointer;
   display: flex;
@@ -169,7 +184,7 @@
   color: #1B5680;
   font-weight: 700;
   font-size: 18px;
-  border-radius: 11.96px;
+  border-radius: 11.9606px;
   border: 1px solid #1B5680;
   cursor: pointer;
   display: flex;
