--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -11,13 +11,12 @@
 /* === Header Bar (Diagonal Style) === */
 .header-bar {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 1440px;
   height: 31.44px;
-  left: 0px;
-  top: 0px;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-  display: flex;
   z-index: 10;
+  display: flex;
 }
 
 .header-bar .blue {
@@ -40,7 +39,7 @@
   width: 496.49px;
   height: 437.58px;
   left: calc(50% - 496.49px / 2);
-  top: calc(50% - 437.58px / 2 + 0px);
+  top: calc(50% - 437.58px / 2);
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.5;
@@ -71,7 +70,6 @@
   box-shadow: 0px 0px 5.93385px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -81,8 +79,8 @@
   position: absolute;
   width: 207.18px;
   height: 250.92px;
-  left: 20px;
-  top: 0px;
+  left: calc(50% - 207.18px / 2);
+  top: calc(50% - 250.92px / 2 - 50px);
   background-size: contain;
   background-repeat: no-repeat;
   background-image: url('../assets/balloon.png');
@@ -93,48 +91,27 @@
   position: absolute;
   width: 624.47px;
   height: 327.28px;
-  left: 250px;
-  top: 0px;
-  background: white;
-  border-radius: 11.96px;
-  box-shadow: 0 0 5.93px rgba(0, 0, 0, 0.08);
+  left: calc(50% - 624.47px / 2);
+  top: calc(50% - 327.28px / 2 + 100px);
+  background: transparent;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-around;
   padding: 20px;
 }
 
 /* == BALLOON TEXT DETAILS == */
-.balloon-number {
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
-.potential-earnings {
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
-.number-of-pumps {
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
+.balloon-number,
+.potential-earnings,
+.number-of-pumps,
 .total-winnings {
   font-size: 24px;
   font-weight: 500;
   line-height: 40px;
-  text-align: justify;
+  text-align: center;
   color: #333333;
+  width: 300px;
 }
 
 /* == BUTTON ROW (Pump & Collect) == */
@@ -162,6 +139,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-transform: uppercase;
 }
 
 /* Collect Button */
@@ -178,4 +156,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-transform: uppercase;
 }
