--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -8,31 +8,32 @@
   overflow: hidden;
 }
 
-/* === Header Bar (Light Diagonal Style) === */
+/* === Header Bar (Diagonal Style) === */
+/* === Header Bar (Figma Group 20937) === */
 .header-bar {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 1440px;
   height: 31.44px;
-  z-index: 10;
+  left: 0px;
+  top: 0px;
+  transform: matrix(-1, 0, 0, 1, 0, 0); /* Flips entire bar horizontally */
   display: flex;
+  z-index: 10;
 }
 
 .header-bar .blue {
   width: 720px;
   height: 100%;
-  background: rgba(27, 87, 126, 0.2); /* Light blue */
-  clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+  background: #1B577E;
+  transform: matrix(-1, 0, 0, 1, 0, 0); /* Flips individual segment */
 }
 
 .header-bar .orange {
   width: 744.67px;
   height: 100%;
-  background: rgba(235, 86, 23, 0.2); /* Light orange */
-  clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%);
+  background: #EB5617;
+  transform: matrix(-1, 0, 0, 1, 0, 0); /* Flips individual segment */
 }
-
 
 /* == WATERMARK == */
 .watermark-image {
@@ -40,11 +41,11 @@
   width: 496.49px;
   height: 437.58px;
   left: calc(50% - 496.49px / 2);
-  top: calc(50% - 437.58px / 2);
+  top: calc(50% - 437.58px / 2 + 0px);
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.5;
-  background-image: url('../assets/watermark.png');
+  background-image: url('image (19).png');
 }
 
 /* == LOGO (top-left) == */
@@ -56,7 +57,7 @@
   top: 68.99px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url('../assets/image19.png');
+  background-image: url('image (19).png');
 }
 
 /* == MAIN WHITE BOX == */
@@ -70,9 +71,6 @@
   border: 0.5px solid #2C51A1;
   box-shadow: 0px 0px 5.93385px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* == BALLOON IMAGE == */
@@ -80,39 +78,75 @@
   position: absolute;
   width: 207.18px;
   height: 250.92px;
-  left: calc(50% - 207.18px / 2);
-  top: calc(50% - 250.92px / 2 - 50px);
+  left: 412.02px;
+  top: 373.12px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url('../assets/balloon.png');
+  background-image: url('image [Background removed] [Upscaled].png');
 }
 
-/* == BALLOON INFO WRAPPER == */
 .balloon-info-wrapper {
   position: absolute;
   width: 624.47px;
   height: 327.28px;
-  left: calc(50% - 624.47px / 2);
-  top: calc(50% - 327.28px / 2 + 100px);
-  background: transparent;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  padding: 20px;
+  left: 452.02px;
+  top: calc(50% - 327.28px / 2 + 24.76px);
+  background: white;
+  border-radius: 11.96px;
+  box-shadow: 0 0 5.93px rgba(0, 0, 0, 0.08);
 }
 
 /* == BALLOON TEXT DETAILS == */
-.balloon-number,
-.potential-earnings,
-.number-of-pumps,
-.total-winnings {
+.balloon-number {
+  position: absolute;
+  width: 270px;
+  height: 40px;
+  left: calc(50% - 270px / 2 + 188.49px);
+  top: 373.12px;
   font-size: 24px;
   font-weight: 500;
   line-height: 40px;
-  text-align: center;
+  text-align: justify;
   color: #333333;
-  width: 300px;
+}
+
+.potential-earnings {
+  position: absolute;
+  width: 303px;
+  height: 40px;
+  left: calc(50% - 303px / 2 + 204.99px);
+  top: 434.19px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
+}
+
+.number-of-pumps {
+  position: absolute;
+  width: 253px;
+  height: 40px;
+  left: calc(50% - 253px / 2 + 179.99px);
+  top: 495.26px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
+}
+
+.total-winnings {
+  position: absolute;
+  width: 263px;
+  height: 40px;
+  left: calc(50% - 263px / 2 + 184.99px);
+  top: 556.34px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
 }
 
 /* == BUTTON ROW (Pump & Collect) == */
@@ -120,7 +154,7 @@
   position: absolute;
   width: 535.95px;
   height: 42px;
-  left: calc(50% - 535.95px / 2);
+  left: calc(50% - 535.95px / 2 + 0px);
   top: 658.4px;
   display: flex;
   justify-content: space-between;
@@ -140,7 +174,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  text-transform: uppercase;
 }
 
 /* Collect Button */
@@ -157,5 +190,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  text-transform: uppercase;
 }
