--- a/src/welcome.css
+++ b/src/welcome.css
@@ -22,12 +22,12 @@ html, body {
 /* 1. Header Bar (Group 20937) */
 .header-bar {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 1440px;
   height: 31.44px;
-  left: 0;
-  top: 0;
   z-index: 10;
-  overflow: hidden;
+  display: flex;
 }
 
 /* Blue full-width base */
