--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -1,194 +1,232 @@
-/* == BASE PAGE == */
+/* Desktop - 5 */
 .balloondemo-page {
   position: relative;
   width: 1440px;
   height: 1024px;
   background: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
-  overflow: hidden;
 }
 
-/* === Header Bar (Diagonal Style) === */
-/* === Header Bar (Figma Group 20937) === */
-.header-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1440px;
-  height: 31.44px;
-  z-index: 10;
-  display: flex;
-}
-
-.header-bar .blue {
-  width: 720px;
-  height: 100%;
-  background: #1B577E;
-  transform: matrix(-1, 0, 0, 1, 0, 0); /* Flips individual segment */
-}
-
-.header-bar .orange {
-  width: 744.67px;
-  height: 100%;
-  background: #EB5617;
-  transform: matrix(-1, 0, 0, 1, 0, 0); /* Flips individual segment */
-}
-
-/* == WATERMARK == */
-.watermark-image {
+/* image (19) 2 - Watermark */
+.image19-2 {
   position: absolute;
   width: 496.49px;
   height: 437.58px;
-  left: calc(50% - 496.49px / 2);
-  top: calc(50% - 437.58px / 2 + 0px);
-  background-size: contain;
-  background-repeat: no-repeat;
+  left: calc(50% - 496.49px/2);
+  top: calc(50% - 437.58px/2 + 0px);
+  background: url('image (19).png') no-repeat center/contain;
   opacity: 0.5;
-  background-image: url('image (19).png');
 }
 
-/* == LOGO (top-left) == */
-.logo-image {
+/* image (19) 1 - Logo */
+.image19-1 {
   position: absolute;
   width: 181.76px;
   height: 160.19px;
   left: 116.27px;
   top: 68.99px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url('image (19).png');
+  background: url('image (19).png') no-repeat center/contain;
 }
 
-/* == MAIN WHITE BOX == */
-.balloon-box {
+/* Rectangle 744 - Main container */
+.rectangle744 {
+  box-sizing: border-box;
   position: absolute;
   width: 778.52px;
   height: 510.86px;
-  left: calc(50% - 778.52px / 2);
-  top: calc(50% - 510.86px / 2 + 20.37px);
-  background: white;
+  left: calc(50% - 778.52px/2);
+  top: calc(50% - 510.86px/2 + 20.37px);
   border: 0.5px solid #2C51A1;
-  box-shadow: 0px 0px 5.93385px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 5.93385px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
+  background: white;
 }
 
-/* == BALLOON IMAGE == */
-/* == BALLOON IMAGE == */
+/* Group 20911 */
+.group20911 {
+  position: absolute;
+  width: 624.47px;
+  height: 327.28px;
+  left: 452.02px;
+  top: calc(50% - 327.28px/2 + 24.76px);
+}
+
+/* Group 20910 & 20909 (same positioning) */
+.group20910,
+.group20909 {
+  position: absolute;
+  width: 303px;
+  height: 223.22px;
+  left: 773.49px;
+  top: 373.12px;
+}
+
+/* Balloon number: 1 of 30 */
+.balloon-number {
+  position: absolute;
+  width: 270px;
+  height: 40px;
+  left: calc(50% - 270px/2 + 188.49px);
+  top: 373.12px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+}
+
+/* Potential earnings: £0.00 */
+.potential-earnings {
+  position: absolute;
+  width: 303px;
+  height: 40px;
+  left: calc(50% - 303px/2 + 204.99px);
+  top: 434.19px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+}
+
+/* Number of pumps: 0 */
+.number-of-pumps {
+  position: absolute;
+  width: 253px;
+  height: 40px;
+  left: calc(50% - 253px/2 + 179.99px);
+  top: 495.26px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+}
+
+/* Total Winnings: £0.00 */
+.total-winnings {
+  position: absolute;
+  width: 263px;
+  height: 40px;
+  left: calc(50% - 263px/2 + 184.99px);
+  top: 556.34px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: justify;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+}
+
+/* Group 20934 - Button container */
+.group20934 {
+  position: absolute;
+  width: 535.95px;
+  height: 42px;
+  left: calc(50% - 535.95px/2 + 0px);
+  top: 658.4px;
+}
+
+/* Pump Button */
+.button-danger-pump {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  gap: 8px;
+
+  position: absolute;
+  width: 217.98px;
+  height: 42px;
+  left: calc(50% - 217.98px/2 - 158.99px);
+  top: 658.4px;
+
+  background: #1B5680;
+  border-radius: 11.9606px;
+  border: none;
+  cursor: pointer;
+  color: #FEE9E7;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 100%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Collect Button */
+.button-danger-collect {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  gap: 8px;
+
+  position: absolute;
+  width: 217.98px;
+  height: 42px;
+  left: calc(50% - 217.98px/2 + 158.99px);
+  top: 658.4px;
+
+  border: 1px solid #1B5680;
+  border-radius: 11.9606px;
+  background: #FFFFFF;
+  cursor: pointer;
+  color: #1B5680;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 100%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Balloon image */
 .balloon-image {
   position: absolute;
   width: 207.18px;
   height: 250.92px;
   left: 412.02px;
   top: 373.12px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url('image [Background removed] [Upscaled].png');
-  z-index: 15; /* Ensures balloon image is above the pump button */
+  background: url('image [Background removed] [Upscaled].png') no-repeat center/contain;
 }
 
-.balloon-info-wrapper {
+/* Group 20937 - Header Bar Container */
+.group20937 {
   position: absolute;
-  width: 624.47px;
-  height: 327.28px;
-  left: 160.02px;
-  top: calc(50% - 307.28px / 2 + 24.76px);
-  background: white;
-  border-radius: 11.96px;
-  box-shadow: 0 0 5.93px rgba(0, 0, 0, 0.08);
-}
-
-/* == BALLOON TEXT DETAILS == */
-.balloon-number {
-  position: absolute;
-  width: 270px;
-  height: 40px;
-  left: calc(50% - 270px / 2 + 188.49px);
-  top: 273.12px;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
-.potential-earnings {
-  position: absolute;
-  width: 303px;
-  height: 40px;
-  left: calc(50% - 303px / 2 + 204.99px);
-  top: 434.19px;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
-.number-of-pumps {
-  position: absolute;
-  width: 253px;
-  height: 40px;
-  left: calc(50% - 253px / 2 + 179.99px);
-  top: 495.26px;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
-.total-winnings {
-  position: absolute;
-  width: 263px;
-  height: 40px;
-  left: calc(50% - 263px / 2 + 184.99px);
-  top: 556.34px;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: justify;
-  color: #333333;
-}
-
-/* == BUTTON ROW (Pump & Collect) == */
-.button-row {
-  position: absolute;
-  width: 535.95px;
-  height: 42px;
-  left: calc(50% - 535.95px / 2 + 0px);
-  top: 658.4px;
+  width: 1440px;
+  height: 31.44px;
+  left: 0;
+  top: 0;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
   display: flex;
-  justify-content: space-between;
 }
 
-/* Pump Button */
-.pump-button {
-  width: 217.98px;
-  height: 42px;
-  background: #1B5680;
-  color: #FEE9E7;
-  font-weight: 700;
-  font-size: 18px;
-  border-radius: 11.9606px;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+/* Rectangle 746 - Blue Header */
+.rectangle746 {
+  position: absolute;
+  width: 720px;
+  height: 31.44px;
+  right: 720px;
+  top: 0;
+  background: #1B577E;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
-/* Collect Button */
-.collect-button {
-  width: 217.98px;
-  height: 42px;
-  background: #FFFFFF;
-  color: #1B5680;
-  font-weight: 700;
-  font-size: 18px;
-  border-radius: 11.9606px;
-  border: 1px solid #1B5680;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+/* Rectangle 745 - Orange Header */
+.rectangle745 {
+  position: absolute;
+  width: 744.67px;
+  height: 31.44px;
+  left: 695.33px;
+  top: 0;
+  background: #EB5617;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
 }
